--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     <p>&nbsp;</p>
             <div class="row">
                 <div class="col-md-4" >
-                    <img src="images/headshot_cropped.png" width="80%" >
+                    <img src="images/Headshot_cropped.png" width="80%" >
                 </div>
                 <div class="col-md-8" style="text-align: left; padding-right:20px;">
                     <h3>"It is the ultimate luxury to combine passion and contribution. It's also a very clear path to happiness." <Br>
